fixed event bug

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Gideon+Roman&family=Noto+Serif:ital,wght@0,700;1,400&family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;0,900;1,400;1,600&display=swap"
       rel="stylesheet"
     />
-    <title>Omari Restaurant</title>
+    <title>Rooftop Restaurant</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -184,6 +184,6 @@
 			</section>
     </section>
     
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
